# centroestudiantes

./: .env.example  .env.local.example  .gitignore  README.md  docker-compose.biblioteca.yml  docker-compose.lyntrix.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260522_0001_initial.py  20260522_0002_status_extend.py  20260525_0003_material_tags.py  20260526_0004_pg_trgm.py  20260526_0005_material_apa.py  20260604_0006_security_moderation.py  20260605_0007_material_carrera_nullable.py  20260608_0008_twofa.py  20260609_0009_copyright.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  (+6 more)
backend/app/core/: config.py  limiter.py  password_policy.py  security.py  user_errors.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  anuncio.py  auth_token.py  copyright_report.py  embedding.py  material.py  refresh_token.py  twofa_backup_code.py  user.py
backend/app/schemas/: auth_2fa.py  auth_email.py  chat.py  copyright.py  material.py  token.py  user.py
backend/app/scripts/: create_admin.py  create_user.py  reindex_materials.py
backend/app/services/: antivirus.py  auth_email.py  auth_tokens.py  citation.py  embeddings.py  file_validation.py  llm_chat.py  material_search.py  material_similar.py  moderation.py  rag_processor.py  storage.py  tags.py  twofa.py
(+211 files in other folders)
