[project]
name = "centro-biblioteca-api"
version = "0.1.0"
description = "API de la Biblioteca Digital - Unidos por el IES"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.3",
  "PyJWT>=2.9",
  "bcrypt>=4.2",
  "python-multipart>=0.0.9",
  "email-validator>=2.2",
  "httpx>=0.27",
  "pypdf>=4.2",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12",
  "pytesseract>=0.3.10",
  "Pillow>=10.0",
  "pdf2image>=1.17",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8",
  "pytest-asyncio>=0.24",
]

[project.scripts]
create-admin = "app.scripts.create_admin:main"
create-user = "app.scripts.create_user:main"
reindex-materials = "app.scripts.reindex_materials:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
